# budget.rip

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CI_CD_GUIDE.md  CLAUDE.md  CODE_QUALITY_IMPROVEMENTS.md  DATABASE_MIGRATIONS_GUIDE.md  DOCKER_GUIDE.md  ONBOARDING.md  QUICK_WINS.md  README.md  vercel.json
.claude/: settings.json
client/: DESIGN_SYSTEM.md  README.md  TESTING.md  eslint.config.js  index.html  jest-transformer.js  jest.config.js  package-lock.json  package.json  requirements.txt  server.py  stripe_server.py  tailwind.config.js  tsconfig.json  vite.config.ts
clientv2/: README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
plans/: 001-fix-stripe-line-item-fields.md  002-fix-event-empty-lineitems-500.md  003-fix-splitwise-expense-refresh-race.md  004-fix-decimal-money-math.md  005-fix-exception-detail-leak.md  006-add-dedup-unit-tests.md  007-add-cel-evaluator-tests.md  008-add-context-reducer-tests.md  009-add-event-edge-case-tests.md  (+16 more)
server/: .env.example  MIGRATIONS.md  MONGODB_TO_MYSQL_MIGRATION.md  MONGODB_TO_POSTGRES_MIGRATION.md  Makefile  README.md  TESTING.md  application.py  clients.py  config.py  constants.py  dao.py  docker-compose.test.yml  domain.py  helpers.py  line_item.py  openapi.json  pyproject.toml  queries.py  recover_collections.py  requirements.txt  run_tests.py  run_tests.sh  serializers.py  setup_test_env.py  test_config.py  vercel.json
server/alembic/: env.py
server/alembic/versions/: 0001_initial_sqlite_schema.py  224fee919c40_drop_mongo_id_columns.py  261fbe964e53_increase_mongo_id_column_size.py  33c2fccb211e_remove_parties_table_and_party_id_from_.py  473bf622732a_initial_schema.py  5fc8e3d2b8a1_initial_postgresql_schema.py  89d79c1aa775_add_can_relink_to_bank_accounts.py  8cf1447285c6_add_notifications_table.py  954cd78cdba6_add_event_id_to_notifications.py  9a34125f75b2_add_bank_accounts_and_users_tables_for_.py  a1b2c3d4e5f6_add_integration_accounts_table.py  a2a7ce64dc79_add_event_hints_table.py  b1c2d3e4f5a6_add_indexes_on_foreign_key_columns.py  c3d4e5f6a7b8_add_user_id_to_tags.py  c967c3314f9f_add_responsible_party_column_to_line_.py  d4e5f6a7b8c9_add_indexes_for_hot_list_queries.py  e12f3d5e488a_add_unique_constraint_to_events_mongo_id.py  e310f0f583d7_add_user_id_to_categories_and_remove_is_.py  e4695b82356b_add_aliases_to_payment_methods.py  e8f383ab67fa_initial_postgresql_schema.py  f1a2b3c4d5e6_rename_transaction_sources_to_api_suffix.py  fb7a20ffd5fe_add_currency_and_balance_fields_to_bank_.py  fc917629c36e_add_unique_constraint_on_line_items_.py
server/api/: index.py
server/migrations/: PHASE3_IMPLEMENTATION.md  delete_account.py  fill_in_dup_transactions.py  mongo2sql.py  phase0_data_audit.py  phase2_migrate_categories.py  phase2_migrate_payment_methods.py  phase2_migrate_reference_data.py  phase2_migrate_tags.py  phase2_verify.py  phase2_verify_reference_data.py  phase3_migrate_line_items.py  phase3_migrate_transactions.py  phase3_reconcile.py  phase3_verify.py  phase4_migrate_events.py  phase4_verify.py  phase5_5_migrate_accounts_users.py  phase5_5_verify.py  phase5_verify.py  remove_na.py  verify_all.py
server/models/: __init__.py  cash_transaction.py  database.py  event.py  line_item.py  sql_models.py
server/resources/: __init__.py  _common.py  account.py  auth.py  cash.py  category.py  event.py  event_hint.py  line_item.py  manual_transaction.py  monthly_breakdown.py  notification.py  splitwise.py  stripe.py  tags.py  venmo.py
server/resources/schemas/: _common.py  application.py  auth.py  category.py  event.py  event_hint.py  line_item.py  manual_transaction.py  monthly_breakdown.py  splitwise.py  stripe.py  tags.py  venmo.py
server/scripts/: dump_openapi.py  migrate_postgres_to_sqlite.py
server/tests/: conftest.py  test_application.py  test_auth.py  test_cash.py  test_category.py  test_cel_evaluator.py  test_dao.py  test_event.py  test_event.py.bak  test_event_hints.py  test_helpers.py  test_id_generator.py  test_line_item.py  test_line_item.py.bak  test_manual_transaction.py  test_models.py  test_monthly_breakdown.py  test_mysql_connection.py  test_notifications.py  test_pg_bulk_ops.py  test_phase2_migration.py  test_phase3_migration.py  test_phase5_read_cutover.py  test_splitwise.py  test_stripe.py  test_tags.py  test_validation.py  test_venmo.py
server/type_defs/: __init__.py  api_responses.py  events.py  line_items.py  transactions.py
server/utils/: __init__.py  bulk_ops.py  cel_evaluator.py  database_handlers.py  dual_write.py  event_operations.py  id_generator.py  id_utils.py  integrations.py  pg_bulk_ops.py  pg_event_operations.py  validation.py
(+228 files in other folders)
