[project]
name = "budgit-server"
version = "0.1.0"
description = "Personal finance tracking Flask backend"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "bcrypt>=5.0.0",
    "blinker>=1.9.0",
    "certifi>=2025.11.12",
    "cffi>=2.0.0",
    "charset-normalizer>=3.4.4",
    "click>=8.3.1",
    "cryptography>=46.0.3",
    "dnspython>=2.8.0",
    "flask>=3.1.2",
    "flask-bcrypt>=1.0.1",
    "flask-cors>=6.0.1",
    "flask-jwt-extended>=4.7.1",
    "flask-pymongo>=3.0.1",
    "gunicorn>=23.0.0",
    "idna>=3.11",
    "iniconfig>=2.3.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "mako>=1.3.10",
    "markupsafe>=3.0.3",
    "oauthlib>=3.3.1",
    "packaging>=25.0",
    "pluggy>=1.6.0",
    "psycopg2-binary>=2.9.11",
    "pycparser>=2.23",
    "pyjwt>=2.10.1",
    "pymongo>=4.15.4",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "python-ulid>=3.1.0",
    "requests>=2.32.5",
    "requests-oauthlib>=1.3.1",
    "six>=1.17.0",
    "splitwise>=3.0.0",
    "sqlalchemy>=2.0.44",
    "stripe>=14.0.0",
    "typing-extensions>=4.15.0",
    "urllib3>=2.5.0",
    "venmo-api>=0.3.1",
    "werkzeug>=3.1.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/migrations/*",
    "*/alembic/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 127
exclude = [
    ".venv",
    "__pycache__",
    ".git",
    "migration_examples",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C90", # mccabe complexity
]
ignore = [
    "C901", # function is too complex (don't block builds on complexity)
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
# Tests and migrations need to set env vars before imports
"tests/conftest.py" = ["E402"]
"migrations/phase3_*.py" = ["E402"]
"migrations/supabase_inserts.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[dependency-groups]
dev = [
    "mongomock>=4.3.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.5",
]
